--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
+    <script src="resources/jquery.js" type="text/javascript"></script>
     <style>
       body {
         min-width: 357px;
