--- a/extension/popup.html
+++ b/extension/popup.html
@@ -17,7 +17,7 @@
         }
         .main {
             clear:both;
-            width:373px;
+            width:393px;
             text-overflow: ellipsis;
         }
         .thumbnail {
@@ -47,6 +47,17 @@
             font-size:14px;
             color: #AA33AA;
         }
+
+
+        span.remove {
+            width:            32px;
+            height:           32px;
+            background-repeat:no-repeat;
+            float:right;
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAElBMVEUAAAD///8zMzMzMzMzMzMzMzPB98y+AAAABXRSTlMAACAwYGjSF/oAAABvSURBVHhevZG7EYAwDEN1kAXYgIaeht5NFgBr/1UgJDF3qAYVLt7Z8g/TS58BjDMuDSs6yA7gih0k0oASG9hIBzJ5NLCQtERyf0roudAw5a0wRarAAtQUR4CaYgqkRE2lrQwmo8tyur4eSE/4z+dODKo8TTDZQdMAAAAASUVORK5CYIIyMTU=');
+        }
+
+
     </style>
 
     <!--
